<resources>
    <string name="app_name">Flight Manager</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">输入密码</string>
    <string name="action_signin">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">邮箱地址格式不正确</string>
    <string name="error_invalid_password">密码长度过短（至少六位）</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_administrator_login">Administrator Login in</string>
    <string name="title_activity_administrator">AdministratorActivity</string>
    <string name="title_activity_activity_flight_details">FlightDetails</string>
    <string name="title_activity_activity_manager_view">管理员界面</string>

    <string name="fight_number">航班号：</string>
    <string name="site_from">出发地点：</string>
    <string name="site_to">到达地点：</string>
    <string name="time_from">出发时间：</string>
    <string name="time_to">到达时间：</string>
    <string name="fight_day">每周班次：</string>
    <string name="plane_type">中转城市：</string>
    <string name="flight_browse_title">航班信息浏览</string>

    <string name="title_activity_flight_details">航班详细信息</string>
    <string name="title_activity_user_login">用户登陆</string>
    <string name="title_activity_manager_login">Sign in</string>
    <string name="action_settings">账户设置</string>

    <string name="user_login_title">登陆</string>
    <string name="title_activity_activity_user_login">登陆</string>
    <string name="action_sign_in">登陆</string>

    <string name="search_button">搜索</string>

    <string name="booking_title">添加订单</string>

    <string name="user_details">个人信息</string>

    <string name="flight_details">航班详细信息</string>

    <string name="activity_manager_view">管理员界面</string>
    <string name="menu_exit">退出管理员登陆</string>


    <string name="fragment_managing_flight">fragment managing flight</string>
    <string name="hint_maflight_id">输入航班编号</string>
    <string name="hint_maflight_companyid">输入航空公司名</string>
    <string name="hint_maflight_wherefrom">输入航班始发地</string>
    <string name="hint_maflight_whereto">输入航班目的地</string>
    <string name="hint_maflight_timebegin">输入开始时间</string>
    <string name="hint_maflight_timeend">输入结束时间</string>
    <string name="hint_maflight_transcity">输入中转站</string>
    <string name="hint_maflight_day">输入起飞日期（形式:年.月.日）</string>
    <string name="maflight_title">新建航班信息</string>
    <string name="dialog_positive_button">确认</string>
    <string name="dialog_negative_button">取消</string>
    <string name="ma_update_title">更改航班信息</string>
    <string name="ma_delete_tite">删除航班信息</string>

    <string name="fragment_managing_user">fragment managing user</string>

    <string name="fragment_managing_order">fragment managing order</string>


</resources>
