<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.shanshan.flightmanager.DialogUpdateFlightData">

    <Toolbar
        android:background="@color/skyBlue"
        android:title="更新航班信息"
        android:titleTextColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="请输入航班编号：" />

    <EditText
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:id="@+id/upflight_id"
        android:paddingTop="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:hint="@string/hint_maflight_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="请按照如下提示输入需要改变的值" />

    <EditText
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:paddingTop="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:hint="@string/hint_maflight_companyid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/upcompany_id" />

    <EditText
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:paddingTop="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:hint="@string/hint_maflight_wherefrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/upflight_wherefrom" />

    <EditText
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:paddingTop="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:hint="@string/hint_maflight_whereto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/upflight_whereto" />

    <EditText
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:paddingTop="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:hint="@string/hint_maflight_timebegin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uptime_begin" />

    <EditText
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:paddingTop="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:hint="@string/hint_maflight_timeend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uptime_end" />

    <EditText
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:paddingTop="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:hint="@string/hint_maflight_transcity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uptranscity" />

    <EditText
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:paddingTop="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:hint="@string/hint_maflight_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/upday" />

    <LinearLayout
        android:paddingTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="取消"
            android:id="@+id/upcancel" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="确认更改" />

    </LinearLayout>


</LinearLayout>
